fix(m365-collab): Fix tool module discovery for Amplifier
- Export Tool = M365CollabTool in __init__.py for module convention
- Add explicit class: m365_collab:Tool path in bundle.yaml
- Simplify config to empty object

This ensures Amplifier can properly discover and load the tool module.

--- a/bundles/m365-collab/bundle.yaml
+++ b/bundles/m365-collab/bundle.yaml
@@ -13,15 +13,12 @@ bundle:
   version: 0.1.0
   description: Agent collaboration via M365 SharePoint - tasks, status, handoffs
 
-# Tool module
+# Tool module with explicit class path
 tools:
   - module: m365-collab
     source: git+https://github.com/ramparte/amplifier-toolkit@main#subdirectory=tools/m365-collab
-    config:
-      # Credentials loaded from environment variables:
-      # - M365_TENANT_ID
-      # - M365_CLIENT_ID
-      # - M365_CLIENT_SECRET
+    class: m365_collab:Tool
+    config: {}
 
 # Context documentation
 context:
