refactor(m365-collab): restructure to match recipes bundle pattern
- Rename package from m365_collab to amplifier_module_tool_m365_collab (convention)
- Add entry-points in pyproject.toml: [project.entry-points."amplifier.modules"]
- Update behavior yaml to reference module: tool-m365-collab (matching entry point name)

This now matches the exact structure of amplifier-bundle-recipes/modules/tool-recipes.

--- a/bundles/m365-collab/behaviors/m365-collab.yaml
+++ b/bundles/m365-collab/behaviors/m365-collab.yaml
@@ -7,7 +7,7 @@ bundle:
   version: 0.1.0
   description: M365 SharePoint collaboration tool for agents
 
-# Tool module
+# Tool module - matches the entry point name in pyproject.toml
 tools:
   - module: tool-m365-collab
     source: git+https://github.com/ramparte/amplifier-toolkit@main#subdirectory=tools/m365-collab
