--- a/tools/m365-collab/pyproject.toml
+++ b/tools/m365-collab/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "httpx>=0.27.0",
 ]
 
+[project.entry-points."amplifier.modules"]
+tool-m365-collab = "amplifier_module_tool_m365_collab:mount"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["m365_collab"]
+packages = ["amplifier_module_tool_m365_collab"]
