fix: add parse_json flag to sub-recipe invocations returning JSON
Add parse_json: true to 5 sub-recipe invocation steps that output JSON
structures in large-scale-project-recipe.yaml. Without this flag, the
sub-recipe outputs were returned as strings, causing errors when later
steps tried to access nested fields with dot notation.

Affected sub-recipe invocations:
- design_domains_list output (line 281)
- antagonist-design-review output (line 471)
- rerun-antagonist-validation output (line 540)
- antagonist-test-review output (line 1223)
- rerun-antagonist-test-validation output (line 1296)

All five steps now properly parse JSON output so nested fields can be
accessed in subsequent steps using dot notation.

--- a/recipes/large-scale-project-recipe.yaml
+++ b/recipes/large-scale-project-recipe.yaml
@@ -278,6 +278,7 @@ stages:
           }
           ```
         output: "design_domains_list"
+        parse_json: true
         timeout: 600
       
       # Step 2: Parallel design generation for critical domains
@@ -467,6 +468,7 @@ stages:
           max_iterations: "{{max_design_iterations}}"
           current_iteration: "{{current_design_iteration}}"
         output: "antagonist_validation_result"
+        parse_json: true
         timeout: 3600
       
       # Step 2: Extract antagonist findings from sub-recipe result
@@ -535,6 +537,7 @@ stages:
           max_iterations: "{{max_design_iterations}}"
           current_iteration: "{{current_design_iteration + 1}}"
         output: "final_antagonist_validation"
+        parse_json: true
         timeout: 3600
       
       # Step 5: Consolidate validation results
@@ -1217,6 +1220,7 @@ stages:
           max_iterations: "{{max_test_iterations}}"
           current_iteration: "{{current_test_iteration}}"
         output: "antagonist_test_validation_result"
+        parse_json: true
         timeout: 3600
       
       # Step 2: Extract antagonist test findings from sub-recipe result
@@ -1289,6 +1293,7 @@ stages:
           max_iterations: "{{max_test_iterations}}"
           current_iteration: "{{current_test_iteration + 1}}"
         output: "final_test_validation"
+        parse_json: true
         timeout: 3600
       
       # Step 5: Consolidate test validation results
